FEAT: 변경된 명함신청 ERD 바탕, 명함신청 관련 코드 수정